# ncnn-android-yolov5_obb

./: README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: yolov5obb.param
app/src/main/java/com/izl/yolov5obb/: BoxObb.java  MainActivity.java  Yolov5Obb.java
app/src/main/jni/: CMakeLists.txt  JniInterface.cpp  yolov5obb.cpp  yolov5obb.h
app/src/main/res/layout/: main.xml
app/src/main/res/values/: strings.xml
